hopefully last iteration started
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10742 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -1,20 +1,21 @@
 \section{Summary and Outlook}
 
-\> cross-section measurement summary
-\>> first time at LHC: t down to the Coulomb-interference region
+\> differential cross-section measurement summary
+\>> first time at LHC: $|t|$ down to the Coulomb-interference region
 \>>> RPs extremely close to beam (unprecedented)
 \>>> novel collimation procedure
 
 
 \> CNI analysis summary
-\>> generally summarise the feasibility of the task
-\>> summarise the examples: numbers, uncertainties
-\>>> dependence on assumptions: non-trivial (rho, B), limited (si tot)
-\>>> any conclusion?
-\>> emphasize -- first LHC results where
-\>>> rho determined in the same analysis (not from an external source)
-\>>> explicit separation of Coulomb and nuclear components -- conceptually more accurate than all previous works
+\>> $N_b=1$, constant phase: excluded
+\>> $N_b=1$, peripheral phase: can fit data, but acceptable from other perspectives ??
+\>> $N_b=3$, both constant and peripheral phase: good description of data
+\>> summary on presented $\rho$ values?
 
+\> $\sigma_{\rm tot}$ -- first LHC results where:
+\>> rho determined in the same analysis (not from an external source)
+\>> explicit separation of Coulomb and nuclear components -- conceptually more accurate than all previous works
+\>> summary on presented $\sigma_{\rm tot}$ values?
 
 \> prospects for future
 \>> how could things be done better: requirements from theory/experiment
@@ -22,7 +23,7 @@
 \>>> either from theory: narrow the range of possible parametrisations
 \>>> either from experiment: extremely precise data (more statistics, lower $|t|$, ...)
 \>> TOTEM plans, measurements foreseen
-\>>> extremely high beta* (2500 m), what t reach (also as a function of s)
+\>>> extremely high beta* (2500 m), what $|t|$ reach (also as a function of $s$)
 \>>> wish: more statistics -- better discrimination power (N vs.~CNI component)
 \>>> wish: lower $|t|$ reach -- helps in several issues in one go. If ``pure'' Coulomb measured, normalisation constrained -- uncertainty of si tot reduced. The rising edge of acceptance shifted, thus higher statistics in the CNI region. Similarly, the (leading) impact of the vertical-alignment uncertainty suppressed.
 \>> other possible experiments: n+n, n+p scattering -- Coulomb reduced, better hint on the nuclear component
