--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -12,7 +12,7 @@
 \usepackage{lineno}
 
 % TODO: only for draft, remove then
-%\usepackage[]{showlabels}
+\usepackage[]{showlabels}
 
 % TODO: play with float settings to get better figure/table placement
 %	http://mintaka.sdsu.edu/GF/bibliog/latex/floats.html
@@ -277,6 +277,12 @@ proton-proton interactions \sep elastic scattering \sep Coulomb-Nuclear Interfer
 	%number = {28},
 	%doi = {10.1142/S021773239600223X},
 
+\bibitem{kl05}
+    %Interference between Coulomb and hadronic scattering in elastic high-energy nucleon collisions
+	\Name{Kundr\' at, V., Lokaj\' i\v cek, M.}
+	\REVIEW{Phys.~Lett.}{B611}{2005}{102--110}
+    %doi            = "10.1016/j.physletb.2005.02.025",
+
 \bibitem{elegent}
 	%title = "Elegent—An elastic event generator ",
 	\Name{Ka\v spar, J.}
@@ -312,7 +318,10 @@ proton-proton interactions \sep elastic scattering \sep Coulomb-Nuclear Interfer
 	%title = "Electromagnetic form factors of the proton at low four-momentum transfer",
 	\REVIEW{Nuclear Physics A}{222}{1974}{269 -- 275}
 	%doi = "DOI: 10.1016/0375-9474(74)90392-3",
-	
+
+\bibitem{kl-8tev}	
+	\Name{Vojtech et al.}
+	note on peripheral phase at 8TeV
 
 \end{thebibliography}
 
