added rho(s) plot
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10743 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -12,10 +12,13 @@
 \>> $N_b=3$, both constant and peripheral phase: good description of data
 \>> summary on presented $\rho$ values?
 
+
 \> $\sigma_{\rm tot}$ -- first LHC results where:
 \>> rho determined in the same analysis (not from an external source)
 \>> explicit separation of Coulomb and nuclear components -- conceptually more accurate than all previous works
 \>> summary on presented $\sigma_{\rm tot}$ values?
+\>>> extremely stable
+\>>> little greater than if Coulomb neglected (expected)
 
 \> prospects for future
 \>> how could things be done better: requirements from theory/experiment
