--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -7,6 +7,7 @@
 %\usepackage{mathptmx}
 \usepackage{url}
 \usepackage{fleqn}
+\usepackage{enumitem}
 
 % TODO: only for draft
 \usepackage{lineno}
@@ -20,12 +21,10 @@
 %----------------------------------------------------------------------------
 
 % TODO - check for consistent use of
-%	1) units in parentheses of brackets
+%	1) units in parentheses or brackets
 %	2) multiplication symbol: \times or \cdot
 
 %----------------------------------------------------------------------------
-
-\definecolor{gray}{gray}{0.50}
 
 \def\d{{\rm d}}
 \def\un#1{\,{\rm #1}}
@@ -308,6 +307,10 @@ proton-proton interactions \sep elastic scattering \sep Coulomb-Nuclear Interfer
 	\Name{Cudell~J.~R.~\etal{} (COMPETE Collaboration)}
 	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
 
+\bibitem{pdg} 
+	\Name{Nakamura K.~\etal{} (Particle Data Group)}
+	\REVIEW{J.~Phys.}{G37}{2010}{075021}
+
 \bibitem{epl95}
     %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001, CERN-PH-EP-2011-101 
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
@@ -340,10 +343,6 @@ proton-proton interactions \sep elastic scattering \sep Coulomb-Nuclear Interfer
 \bibitem{kklp}	
 	\Name{Ka\v spar, J.~\etal}
 	\REVIEW{Nucl.~Phys.}{B843}{2011}{84}
-
-%\bibitem{pdg} 
-%	\Name{Nakamura K.~\etal{} (Particle Data Group)}
-%	\REVIEW{J.~Phys.}{G37}{2010}{075021}
 
 \bibitem{B_vs_s}
 	\Name{ISR (CR Collaboration)} \REVIEW{Phys.~Lett.}{B62}{1976}{460}; 
