--- a/2013/1km paper/fig/fit_exp1/table_data.tex
+++ b/2013/1km paper/fig/fit_exp1/table_data.tex
@@ -1,17 +1,17 @@
-\begin{tabular}{lcc}\hline\hline
-& constant & peripheral \cr\hline\hline
-$\hbox{fit 1}: \chi^2/\hbox{ndf}$	&  $47.8 / 27 = 1.769$	&  $27.7 / 25 = 1.106$\cr
-$\hbox{fit 2}: \chi^2/\hbox{ndf}$	& $179.2 / 58 = 3.090$	&  $57.4 / 56 = 1.026$\cr
-\hline                              
-$a\ung{mb/GeV^2}$					& $540.126 \pm 21.461$	& $545.823 \pm 20.488$\cr
-$b_1\ung{GeV^{-2}}$					&  $19.416 \pm  0.048$	&  $19.685 \pm  0.056$\cr
-\hline                              
-$p_0$								&   $1.524 \pm  0.023$	&   $1.475 \pm  0.024$\cr
-$\zeta_1$							&                     	& $800.000$           \cr
-$\kappa$							&                     	&   $2.408 \pm  0.068$\cr
-$\nu\ung{GeV^{-2}}$					&                     	&   $8.492 \pm  0.703$\cr
-\hline                              
-$\rho$								&   $0.047 \pm  0.023$	&   $0.096 \pm  0.024$\cr
-$\sigma_{\rm tot}\ung{mb}$			& $102.706 \pm  2.043$	& $102.881 \pm  1.945$\cr
+\begin{tabular}{lccc}\hline\hline
+& SWY, constant & KL, constant & KL, peripheral \cr\hline\hline
+$\hbox{fit 1}: \chi^2/\hbox{ndf}$	&  $47.8 / 27 = 1.769$	&  $47.8 / 27 = 1.769$	&  $27.7 / 25 = 1.106$\cr
+$\hbox{fit 2}: \chi^2/\hbox{ndf}$	& $179.2 / 58 = 3.090$	& $179.2 / 58 = 3.090$	&  $57.4 / 56 = 1.026$\cr
+\hline                                                     
+$a\ung{mb/GeV^2}$				 	& $540.126 \pm 21.461$	& $540.126 \pm 21.461$	& $545.823 \pm 20.488$\cr
+$b_1\ung{GeV^{-2}}$				 	&  $19.416 \pm  0.048$	&  $19.416 \pm  0.048$	&  $19.685 \pm  0.056$\cr
+\hline                                                    
+$p_0$							 	&   $1.524 \pm  0.023$  &   $1.524 \pm  0.023$	&   $1.475 \pm  0.024$\cr
+$\zeta_1$						 	&                       &                     	& $800.000$           \cr
+$\kappa$						 	&                       &                     	&   $2.408 \pm  0.068$\cr
+$\nu\ung{GeV^{-2}}$				 	&                       &                     	&   $8.492 \pm  0.703$\cr
+\hline                                                    
+$\rho$							 	&   $0.047 \pm  0.023$  &   $0.047 \pm  0.023$	&   $0.096 \pm  0.024$\cr
+$\sigma_{\rm tot}\ung{mb}$		 	& $102.706 \pm  2.043$  & $102.706 \pm  2.043$	& $102.881 \pm  1.945$\cr
 \hline\hline
 \end{tabular}
