data tables updated, cross-checked with Simone's bordeau results
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10744 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -213,17 +213,32 @@ $\Delta t_i$ representing the width of the $i$-th bin
 
 \end{enumerate}
 
+As anticipated above, one of the goals of this report is to probe the origin of the earlier observed differential cross-section non-exponentiality \cite{8tev-90m}. Therefore, the following two classes of fits will be considered.
+\begin{itemize}
+\item Section \ref{sec:fit exp1}: fits with purely-exponential nuclear modulus, that is $N_b=1$ in Eq.~(\ref{eq:nuc mod}). In this case, the non-exponentiality must come from the CNI effects.
+\item Section \ref{sec:fit exp3}: fits with nuclear modulus flexible enough to describe the non-exponentiality with or without the CNI effects.
+\end{itemize}
+
+
+Three nuclear phase options have been considered which yield, as shown in Fig.~\ref{fig:bdist exp3}, three different levels of centrality/peripherality:
+\begin{itemize}\setlength\itemsep{0pt}
+\item constant phase, Eq.~(\ref{eq:nuc phase con}),
+\item mid-peripheral phase, Eq.~(\ref{eq:nuc phase per}) with parameters free within the bounds in Eq.~(\ref{eq:nuc phase per val}),
+\item full-peripheral phase, Eq.~(\ref{eq:nuc phase per}) with parameters fixed to the central values in Eq.~(\ref{eq:nuc phase per val}).
+\end{itemize}
+
+Below: brief description of attempts that have been tried but are not worth detailed discussion below.
+
+\TODO{Tried several form-factors, no impact on the data.}
+
+\TODO{Fits with constant, standard and Bailly phase practically indistinguishable $\rightarrow$ treated as one family represented by the constant phase.}
+
 \TODO{Approaches A and B give compatible results $\rightarrow$ stability.}
 
 \TODO{Fits with the two variants of the KL formula, Eqs.~(\ref{eq:int kl}) and (\ref{eq:int kl exp}), give compatible results.}
 
 \TODO{Fits with different implementations of interference formulae (\cite{elegent} and custom) $\rightarrow$ confidence, no numerical issues.}
 
-As anticipated above, one of the goals of this report is to probe the origin of the earlier observed differential cross-section non-exponentiality \cite{8tev-90m}. Therefore, the following two classes of fits will be considered.
-\begin{itemize}
-\item Section \ref{sec:fit exp1}: fits with purely-exponential nuclear modulus, that is $N_b=1$ in Eq.~(\ref{eq:nuc mod}). In this case, the non-exponentiality must come from the CNI effects.
-\item Section \ref{sec:fit exp3}: fits with nuclear modulus flexible enough to describe the non-exponentiality event without the CNI effects.
-\end{itemize}
 
 
 %----------------------------------------------------------------------------------------------------
@@ -233,11 +248,11 @@ As anticipated above, one of the goals of this report is to probe the origin of 
 The goal of this section is to test whether the data are compatible with purely-exponential nuclear modulus, i.e.~$N_b=1$ in Eq.~(\ref{eq:nuc mod}). In other words, the non-exponetiality is forced come from the Coulomb-induced effects. For that two different nuclear phase options are considered: constant (as a representant of the central family), Eq.~(\ref{eq:nuc phase con}), and peripheral, Eq.~(\ref{eq:nuc phase per}), with parameters free within the ranges indicated in Eq.~(\ref{eq:nuc phase per val}). The fit results are summarised in Table~\ref{tab:fit exp1} and shown in Fig.~\ref{fig:fit exp1}.
 
 \begin{table}
-\caption{Fit results with $N_b=1$. Each column corresponds to a different interference formula and/or nuclear phase. The peripheral phase parameters were allowed to vary within the ranges indicated in Eq.~(\ref{eq:nuc phase per val}).}
+\caption{Fit results with $N_b=1$. Each column corresponds to a fit with different interference formula and/or nuclear phase. \TODO{add RMS of b?}}
 \vskip-3mm
 \label{tab:fit exp1}
 \begin{center}
-\setlength\tabcolsep{5mm}
+\setlength\tabcolsep{2.5mm}
 \small
 \input fig/fit_exp1/table_data.tex
 \end{center}
@@ -247,7 +262,7 @@ The goal of this section is to test whether the data are compatible with purely-
 \begin{center}
 \includegraphics{fig/fit_exp1/t_dist_rel_with_fit.pdf}
 \includegraphics{fig/fit_exp1/phase_cni_effect.pdf}
-\caption{Visualisation of fit results from Table~\ref{tab:fit exp1} obtained with KL formula and $N_b=1$.
+\caption{Visualisation of fit results from Table~\ref{tab:fit exp1} obtained with $N_b=1$. The continuous (dashed) lines correspond to fits with KL (SWY) formula. Note that the fits with constant nuclear phase largely overlap.
 TOP: fits compared to differential cross-section data in a relative reference frame, see the vertical axis label. The reference is identical to the one in \cite{8tev-90m}. 
 BOTTOM LEFT: $t$-dependence of the nuclear phase as extracted from the fits.
 BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fits.
@@ -258,21 +273,22 @@ BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fit
 
 Table~\ref{tab:fit exp1} shows that both fits with constant phase are essentially identical and have bad fit quality. The step-2 fit using both $\beta^*=1000$ and $90\un{m}$ data can be excluded with $7.6\un{\sigma}$ significance. In turn, since the combination of $N_b=1$ and constant phase is the only compatible with the SWY formula, its use is excluded, too.
 
-The quality of the fit with peripheral phase is good, but \TODO{is it reasonable from other aspects?}
+Although the quality of the fit with peripheral phases is good, but these options seem to be disfavoured from different perspectives.
+\begin{itemize}
+\item Most models predict non-exponential nuclear modulus, see e.g.~\cite{elegent}. Several reasons are summarised in \TODO{cite the KMR paper}.
+\item The obtained value of $\rho$ is significantly lower than most extrapolations from lower energies \TODO{cite some of them}.
+\item All the non-exponentiality is taken by CNI -- any special/extreme construction by Vojtech?? \TODO{formulate better.}
+\end{itemize}
 
 
 %----------------------------------------------------------------------------------------------------
 \subsection{Fits with Non-Exponential Nuclear Modulus}
 \label{sec:fit exp3}
 
-The aim of this section is to discuss fits with enough flexibility in the nuclear modulus to describe the non-exponentiality in the data. For this, $N_b=2$ to $5$ were considered. The optimal degree was chosen according to two criteria: reasonable $\chi^2/\hbox{ndf}$ and stability of fit parameters (among which $\rho$ is one of the most sensitive). For example, with constant phase the fit (step 1) with $N_b=2$ yields $\chi^2/\hbox{ndf} = 1.07$ and $\rho = 0.101$ while with $N_b=3$ gives $\chi^2/\hbox{ndf} = 1.03$ and $\rho = 0.121$. Both fits have the normalised $\chi^2$ reasonably close to $1$, but the value of $\rho$ changes significantly between $N_b=2$ and $3$ which is unexpected should $N_b=2$ be sufficient. On the other hand $N_b=4$ gives $\chi^/\hbox{ndf} = 0.861$ which is unreasonably low. Therefore $N_b=3$ was chosen.
+The aim of this section is to discuss fits with enough flexibility in the nuclear modulus to describe the non-exponentiality in the data. For this, $N_b=2$ to $5$ were considered. The optimal degree was chosen according to two criteria: reasonable $\chi^2/\hbox{ndf}$ and stability of fit parameters (among which $\rho$ is one of the most sensitive). For example, with constant phase the fit (step 1) with $N_b=2$ yields $\chi^2/\hbox{ndf} = 1.07$ and $\rho = 0.101$ while with $N_b=3$ gives $\chi^2/\hbox{ndf} = 1.03$ and $\rho = 0.121$. Both fits have the normalised $\chi^2$ reasonably close to $1$, but the value of $\rho$ changes significantly between $N_b=2$ and $3$ which is unexpected should $N_b=2$ be sufficient. On the other hand $N_b=4$ gives $\chi^2/\hbox{ndf} = 0.861$ which is unreasonably low. Therefore $N_b=3$ was chosen.
 
-The only applicable interference formula is KL. Three nuclear phase options have been considered which yield, as shown in Fig.~\ref{fig:bdist exp3}, three different levels of centrality/peripherality:
-\begin{itemize}\setlength\itemsep{0pt}
-\item constant phase, Eq.~(\ref{eq:nuc phase con}),
-\item mid-peripheral phase, Eq.~(\ref{eq:nuc phase per}) with parameters free within the bounds in Eq.~(\ref{eq:nuc phase per val}),
-\item full-peripheral phase, Eq.~(\ref{eq:nuc phase per}) with parameters fixed to the central values in Eq.~(\ref{eq:nuc phase per val}).
-\end{itemize}
+The only applicable interference formula is KL.
+
 
 \iffalse
 * KL, exp2, con
@@ -303,7 +319,7 @@ The impact-parameter distribution \TODO{ref} for the three fits is shown in Fig.
 \TODO{Statement about si tot: stability (also wrt. Nb=1) and that compatible but little higher (as expected) compared to the previous results.}
 
 \begin{table}
-\caption{Fit results with KL formula, $N_b=3$ and constant, Eq.~(\ref{eq:nuc phase con}), or peripheral, Eq.~(\ref{eq:nuc phase per}), nuclear phase. For the ``mid'' column, the peripheral phase parameters were free within the bounds in Eq.~(\ref{eq:nuc phase per val}), for the ``full'' they were fixed to the central values.}
+\caption{Fit results with KL formula and $N_b=3$. \TODO{add RMS of b?}}
 \vskip-3mm
 \label{tab:fit exp3}
 \begin{center}
@@ -317,7 +333,7 @@ The impact-parameter distribution \TODO{ref} for the three fits is shown in Fig.
 \begin{center}
 \includegraphics{fig/fit_exp3/t_dist_rel_with_fit.pdf}
 \includegraphics{fig/fit_exp3/phase_cni_effect.pdf}
-\caption{Visualisation of fit results from Table~\ref{tab:fit exp3} obtained with KL formula and $N_b=3$.
+\caption{Visualisation of fit results from Table~\ref{tab:fit exp3} obtained with KL formula and $N_b=3$. The solid lines correspond to fits with different nuclear phases.
 TOP: fits compared to differential cross-section data in a relative reference frame, see the vertical axis label. The reference is identical to the one in \cite{8tev-90m}. 
 BOTTOM LEFT: $t$-dependence of the nuclear phase as extracted from the fits.
 BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fits.
@@ -339,7 +355,7 @@ BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fit
 \begin{figure*}
 \begin{center}
 \includegraphics{fig/rho_s.pdf}
-\caption{Energy dependence of the $\rho$ parameter. The blue (green) hollow triangles correspond to $\rm pp$ ($\rm \bar pp$) data from PDG \cite{pdg}. The hollow dot stands for the earlier indirect determination by TOTEM \cite{epl101-tot}. The red triangles show the new results obtained in Section~\ref{sec:fit exp3}, using different nuclear phases. The black curve gives the preferred $\rm pp$ model by COMPETE \cite{compete}, obtained without using LHC data.
+\caption{Energy dependence of the $\rho$ parameter. The blue (green) hollow triangles correspond to $\rm pp$ ($\rm \bar pp$) data from PDG \cite{pdg} \TODO{warning: most of points likely to be determined by SWY}. The hollow red dot stands for the earlier indirect determination by TOTEM \cite{epl101-tot}. The full red dot represents the three results from Table~\ref{tab:fit exp3} which happen to be identical within the resolution. The black curve gives the preferred $\rm pp$ model by COMPETE \cite{compete}, obtained without using LHC data.
 }%
 \label{fig:rho cmp exp3}
 \end{center}
