--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -8,17 +8,24 @@
 
 \> CNI analysis summary
 \>> $N_b=1$, constant phase: excluded
-\>> $N_b=1$, peripheral phase: can fit data, but acceptable from other perspectives ??
-\>> $N_b=3$, both constant and peripheral phase: good description of data
+\>> $N_b=1$, peripheral phase: can fit data, but doubtful from other perspectives
+\>> $N_b=3$, both constant and peripheral phase: good description of data $\Rightarrow$ centrality is not a necessity
 \>> summary on presented $\rho$ values?
 
+\> $\rho$
+\>> at LHC: for the first time extracted via Coulomb-interference
+\>> results from Section~\ref{sec:fit exp3} can be summarised
+\begin{equation}
+\label{eq:rho final}
+\rho = 0.12 \pm 0.03
+\end{equation}
 
 \> $\sigma_{\rm tot}$ -- first LHC results where:
 \>> rho determined in the same analysis (not from an external source)
 \>> explicit separation of Coulomb and nuclear components -- conceptually more accurate than all previous works
 \>> summary on presented $\sigma_{\rm tot}$ values?
 \>>> extremely stable
-\>>> little greater than if Coulomb neglected (expected)
+\>>> little greater than if Coulomb neglected (expected as long as $\rho > 0$)
 
 \> prospects for future
 \>> how could things be done better: requirements from theory/experiment
