--- a/2013/1km paper/fig/fit_exp1/table_data.tex
+++ b/2013/1km paper/fig/fit_exp1/table_data.tex
@@ -1,17 +1,17 @@
-\begin{tabular}{lccc}\hline\hline
-& SWY, constant & KL, constant & KL, peripheral \cr\hline\hline
-$\hbox{fit 1}: \chi^2/\hbox{ndf}$	&  $47.8 / 27 = 1.769$	&  $47.8 / 27 = 1.769$	&  $27.7 / 25 = 1.106$\cr
-$\hbox{fit 2}: \chi^2/\hbox{ndf}$	& $179.2 / 58 = 3.090$	& $179.2 / 58 = 3.090$	&  $57.4 / 56 = 1.026$\cr
-\hline                                                     
-$a\ung{mb/GeV^2}$				 	& $540.126 \pm 21.461$	& $540.126 \pm 21.461$	& $545.823 \pm 20.488$\cr
-$b_1\ung{GeV^{-2}}$				 	&  $19.416 \pm  0.048$	&  $19.416 \pm  0.048$	&  $19.685 \pm  0.056$\cr
-\hline                                                    
-$p_0$							 	&   $1.524 \pm  0.023$  &   $1.524 \pm  0.023$	&   $1.475 \pm  0.024$\cr
-$\zeta_1$						 	&                       &                     	& $800.000$           \cr
-$\kappa$						 	&                       &                     	&   $2.408 \pm  0.068$\cr
-$\nu\ung{GeV^{-2}}$				 	&                       &                     	&   $8.492 \pm  0.703$\cr
-\hline                                                    
-$\rho$							 	&   $0.047 \pm  0.023$  &   $0.047 \pm  0.023$	&   $0.096 \pm  0.024$\cr
-$\sigma_{\rm tot}\ung{mb}$		 	& $102.706 \pm  2.043$  & $102.706 \pm  2.043$	& $102.881 \pm  1.945$\cr
+\begin{tabular}{lcccc}\hline\hline
+									& SWY, constant 		& KL, constant 			& KL, mid-peripheral 	& KL, full-peripheral	\cr\hline\hline
+$\hbox{step 1:}\, \chi^2/\hbox{ndf}$	& $47.7 / 27 = 1.77$	& $47.8 / 27 = 1.77$	& $27.7 / 25 = 1.11$	& $27.7 / 27 = 1.03$	\cr
+$\hbox{step 2:}\, \chi^2/\hbox{ndf}$	& $178.9 / 58 = 3.08$	& $179.2 / 58 = 3.09$	& $57.4 / 56 = 1.03$	& $63.5 / 58 = 1.10$	\cr
+\hline
+$a\ung{mb/GeV^2}$				 	& $540 \pm 21$			& $540 \pm 21$			& $546 \pm 20$			& $551 \pm 20$			\cr
+$b_1\ung{GeV^{-2}}$				 	& $19.42 \pm  0.05$ 	& $19.42 \pm  0.05$		& $19.69 \pm  0.06$		& $19.74 \pm  0.05$		\cr
+\hline
+$p_0$							 	& $1.53 \pm  0.02$  	& $1.52 \pm  0.02$		& $1.48 \pm  0.02$		& $1.48 \pm  0.02$		\cr
+$\zeta_1$						 	&					 	&					 	& $800$				   	& $800$					\cr
+$\kappa$						 	&					 	&					 	& $2.41 \pm  0.07$		& $2.311$				\cr
+$\nu\ung{GeV^{-2}}$				 	&					 	&					 	& $8.50 \pm  0.7$		& $8.161$				\cr
+\hline
+$\rho$							 	& $0.04 \pm  0.02$  	& $0.05 \pm  0.02$		& $0.10 \pm  0.02$		& $0.10 \pm  0.02$		\cr
+$\sigma_{\rm tot}\ung{mb}$		 	& $102.7 \pm  2.0$		& $102.7 \pm  2.0$		& $102.9 \pm  1.9$		& $103.4 \pm  1.9$		\cr
 \hline\hline
 \end{tabular}
