--- a/2013/1km paper/fig/fit_exp3/table_data.tex
+++ b/2013/1km paper/fig/fit_exp3/table_data.tex
@@ -1,19 +1,19 @@
 \begin{tabular}{lccc}\hline\hline
-& constant & mid-peripheral & full-peripheral \cr\hline\hline
-$\hbox{fit 1}: \chi^2/\hbox{ndf}$	&  $25.6 / 25 = 1.025$	&  $24.8 / 23 = 1.077$	&  $25.0 / 25 = 1.000$\cr
-$\hbox{fit 2}: \chi^2/\hbox{ndf}$	&  $57.6 / 56 = 1.028$	&  $59.2 / 54 = 1.097$	&  $57.8 / 56 = 1.032$\cr
-\hline                                                                               
-$a\ung{mb/GeV^2}$					& $543.403 \pm 21.888$	& $548.262 \pm 22.126$	& $545.889 \pm 22.091$\cr
-$b_1\ung{GeV^{-2}}$					&  $20.463 \pm  0.128$	&  $20.075 \pm  0.131$	&  $19.550 \pm  0.134$\cr
-$b_2\ung{GeV^{-4}}$					&   $8.765 \pm  1.530$	&   $5.092 \pm  1.512$	&  $-3.408 \pm  1.572$\cr
-$b_3\ung{GeV^{-6}}$					&  $20.206 \pm  5.399$	&  $14.403 \pm  5.296$	& $-13.292 \pm  5.458$\cr
-\hline                                                                               
-$p_0$								&   $1.451 \pm  0.028$	&   $1.454 \pm  0.028$	&   $1.453 \pm  0.028$\cr
-$\zeta_1$							&                     	& $800.000$	            & $800.000$           \cr
-$\kappa$							&                     	&   $2.710 \pm  0.665$	&   $2.311$           \cr
-$\nu\ung{GeV^{-2}}$					&                     	&   $8.549 \pm  0.777$	&   $8.161$           \cr
-\hline                                                                               
-$\rho$								&   $0.121 \pm  0.029$	&   $0.118 \pm  0.029$	&   $0.118 \pm  0.029$\cr
-$\sigma_{\rm tot}\ung{mb}$			& $102.388 \pm  2.092$	& $102.878 \pm  2.104$	& $102.648 \pm  2.105$\cr
+										& constant 				& mid-peripheral 		& full-peripheral		\cr\hline\hline
+$\hbox{step 1:}\, \chi^2/\hbox{ndf}$	& $25.6 / 25 = 1.03$	& $24.8 / 23 = 1.08$	& $25.0 / 25 = 1.00$	\cr
+$\hbox{step 2:}\, \chi^2/\hbox{ndf}$	& $57.6 / 56 = 1.03$	& $59.2 / 54 = 1.10$	& $57.8 / 56 = 1.03$	\cr
+\hline
+$a\ung{mb/GeV^2}$						& $543 \pm 22$			& $548 \pm 22$			& $546 \pm 22$			\cr
+$b_1\ung{GeV^{-2}}$						& $20.46 \pm  0.13$		& $20.08 \pm  0.13$		& $19.55 \pm  0.13$		\cr
+$b_2\ung{GeV^{-4}}$						& $8.8 \pm  1.5$		& $5.1 \pm  1.5$		& $-3.4 \pm  1.6$		\cr
+$b_3\ung{GeV^{-6}}$						& $20 \pm  5$			& $14 \pm  5$			& $-13 \pm  5$			\cr
+\hline
+$p_0$									& $1.45 \pm  0.03$		& $1.45 \pm  0.03$		& $1.45 \pm  0.03$		\cr
+$\zeta_1$								&					 	& $800$					& $800$			   		\cr
+$\kappa$								&					 	& $2.7 \pm  0.7$		& $2.311$		   		\cr
+$\nu\ung{GeV^{-2}}$						&					 	& $8.5 \pm  0.8$		& $8.161$		   		\cr
+\hline
+$\rho$									& $0.12 \pm  0.03$		& $0.12 \pm  0.03$		& $0.12 \pm 0.03$		\cr
+$\sigma_{\rm tot}\ung{mb}$				& $102.4 \pm  2.1$		& $102.9 \pm  2.1$		& $102.6 \pm  2.1$		\cr
 \hline\hline
 \end{tabular}
