--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -15,7 +15,7 @@ hadronic amplitude, implying in particular a purely exponential modulus and a
 constant phase for all $t$ (see the discussion in 
 Section~\ref{sec:cni interference}).
 As result, traditionally the phase value $\arg {\cal A}^{\rm N} (t=0)$, or
-equivalently, $\rho \equiv \cot \, \arg {\cal A}^{\rm N} (0) = \frac{{\cal R A}^{\rm N} (0)}{{\cal I A}^{\rm N} (0)}$ was quoted. 
+equivalently, $\rho \equiv \cot \, \arg {\cal A}^{\rm N} (0) = \frac{\Re {\cal A}^{\rm N} (0)}{\Im {\cal A}^{\rm N} (0)}$ was quoted. 
 Most of the interest in $\rho$ lies in its predictive power on total cross-sections at higher centre-of-mass energies via dispersion 
 relations~\cite{dremin-dispersion}. 
 
@@ -51,3 +51,5 @@ The paper is organised as follows.
 %The $\beta^{*}=90\,$m set with very high statistics at higher $|t|$ fixes the 
 %hadronic modulus, whereas the $\beta^{*}=1000\,$m set with its reach to very low
 %$|t|$ determines phase parameters.
+
+\TODO{physics goals: $\sigma_{\rm tot}$ and $\rho$, Coulomb analysis = necessity/tool}
