started to remove TODOs from Coulomb chapter
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10750 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -13,7 +13,7 @@
 \usepackage{lineno}
 
 % TODO: only for draft, remove then
-\usepackage[]{showlabels}
+%\usepackage[]{showlabels}
 
 % TODO: play with float settings to get better figure/table placement
 %	http://mintaka.sdsu.edu/GF/bibliog/latex/floats.html
