--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -1,15 +1,10 @@
 \section{Coulomb-Nuclear Interference}
 \label{sec:coulomb}
 
-\TODO{Update this paragraph}.
-This section presents a study of the measured differential cross-section focused on the effects of the Coulomb-nuclear interference (CNI). These effects are sensitive to the phase of nuclear amplitude and thus allow for determination of additional physics parameters such as $\rho$. The presentation starts with Section~\ref{sec:cni framework} outlining the theoretical concepts needed to describe the CNI effects. It is followed by Section~\ref{sec:cni task discussion} with a critical discussion on the task feasibility, presenting a strategy for the study. Section~\ref{sec:cni fit techniques} describes fit techniques used for parameter determination. As anticipated in the introduction, this study strongly benefits from including another high-statistics data set \cite{8tev-90m} obtained at the same energy however with beam optics $\beta^* = 90\un{m}$. This gives several possibilities of combination with the above presented data, from $\beta^* = 1000\un{m}$ optics. In particular, Section~\ref{sec:cni common fits} gives results where both data sets enter the fit on equal ground, while Section~\ref{sec:cni reciprocal fits} reports results where the data sets are assigned complementary roles.
+This section presents a study of the measured differential cross-section, where the Coulomb-nuclear interference (CNI) is used a tool to probe the nuclear component of the scattering amplitude. Since the CNI effects are sensitive to the phase of the nuclear amplitude, both modulus and phase can be tested. For the modulus, a relevant question is whether the earlier reported non-exponentiality of differential cross-section \cite{8tev-90m} can be attributed solely to the nuclear component. Concerning the phase, several parametrisations with different physics interpretations will be tested and phase value at $t = 0$ ($\rho$ parameter) will be determined.
 
-\TODO{Which binning of 90m data is used}
+The presentation starts with Section~\ref{sec:cni framework} outlining the theoretical concepts needed to describe the CNI effects. It is followed by Section~\ref{sec:fit procedure} providing details on fitting techniques used to analyse the data. Sections \ref{sec:fit exp1} and \ref{sec:fit exp3} discuss fit results for two relevant physics alternatives: purely exponential and non-exponential nuclear modulus.
 
-\TODO{Move this paragraph after the framework section? It needs lots of terms defined there...}
-\> define goals = by using data constrain nuclear amplitude:
-\>> modulus -- non-exponentiality in nuclear component or CNI effect?
-\>> phase -- value of $\rho$, test compatibility of central/peripheral phases, ...
 
 
 %----------------------------------------------------------------------------------------------------
@@ -17,15 +12,13 @@ This section presents a study of the measured differential cross-section focused
 \subsection{Theoretical Framework}
 \label{sec:cni framework}
 
-In this section the different components of the combined elastic scattering cross-section, already briefly outlined in the introduction, are discussed in more detail. In particular, the Coulomb amplitude (Section~\ref{sec:cni coulomb}), the nuclear amplitude (Section~\ref{sec:cni nuclear}) and their interference (Section~\ref{sec:cni interference}).
-
-\TODO{Expect three contributions to the amplitude, corresponding to Feynman diagram sets containing
+The amplitude describing elastic scattering of protons may be expected to receive three contributions, each corresponding to one of the following Feynman diagram sets.
 \begin{itemize}
-\item QED elements only -- calculable from first principles, Section~\ref{sec:cni coulomb}
-\item QCD elements only -- not calculable from first principles, phenomenological amplitude used instead, Section~\ref{sec:cni nuclear}
-\item both QED and QCD -- not calculable from first principles, phenomenological amplitude cannot be used either since this amplitude is correlated with the previous two. Section~\ref{sec:cni interference} will introduce two interference formulae attempting to calculate these effects.
+\item Containing QED elements only. This amplitude can be calculated from first principles, see Section~\ref{sec:cni coulomb}.
+\item Containing QCD elements only. This amplitude is not calculable from first principles, Sections~\ref{sec:cni nuclear modulus} and \ref{sec:cni nuclear phase} will propose several phenomenologically motived parametrisations.
+\item Containing both QED and QCD elements. This contribution is neither calculable from first principles, neither ad hoc parametrisation can be used -- this amplitude is correlated with the previous two. Section~\ref{sec:cni interference} will introduce two interference formulae attempting to calculate corresponding effects.
 \end{itemize}
-}
+
 
 %------------------------------------------------------------------
 \subsubsection{Coulomb Amplitude}
@@ -40,39 +33,34 @@ The Coulomb amplitude can be calculated from QED (e.g.~Section 3.2 in \cite{bloc
 \end{equation}
 where $\alpha$ denotes the fine-structure constant and $m$ represents proton mass.
 
-The form factors by Pucket et al.~\cite{puckett10} are used in this study and it will be shown that different choices have negligible impact on results presented later on.
 
 
 %------------------------------------------------------------------
-\subsubsection{Nuclear Amplitude}
-\label{sec:cni nuclear}
-
-Very few conclusions can be made on the nuclear amplitude from first principles (QCD). Instead, several phenomenology or theory motivated descriptions will be outlined here. The choice will be critically discussed in Section~\ref{sec:cni task discussion}.
-
-%--------------------
-\vskip3mm
-\hbox to\hsize{\bf Modulus\hfil}
+\subsubsection{Nuclear Amplitude -- Modulus}
+\label{sec:cni nuclear modulus}
 
 At $|t| \gtrsim 0.02\un{GeV^2}$ the effects due to the Coulomb interaction are not expected to be large (c.f.~Figure~\ref{fig:cni effect}). Thus, the measured cross-section can be -- to a large extent -- attributed to the nuclear component. Following Table~\ref{tab:data} and especially \cite{8tev-90m} which presents high-precision data for $|t| < 0.2\un{GeV^2}$, it is reasonable to parametrise the nuclear modulus as
 \begin{equation}
 \label{eq:nuc mod}
 \left | {\cal A}^{\rm N}(t) \right | = \sqrt{s\over\pi} {p\over \hbar c} \sqrt{a} \exp\left( {1\over 2} \sum\limits_{n = 1}^{N_b} b_n\, t^n \right)\ ,
 \end{equation}
-where $N_b$ gives the number of free parameters in the exponent. This parametrisation is also compatible with a number of theoretical models (see e.g.~\cite{elegent}). \TODO{Consistently with \cite{8tev-90m}, $a$ gives differential cross-section intercept and $b_1$ forward diffractive slope}.
+where $N_b$ gives the number of free parameters in the exponent. Consistently with \cite{8tev-90m}, the parameter $b_1$ gives forward diffractive slope and $a$ the intercept of the differential cross-section at $t=0$. This parametrisation is also compatible with a number of theoretical models (see e.g.~\cite{elegent}).
 
 Since the calculation of Coulomb-nuclear interference may, in principle, involve integrations (e.g.~Eq.~(\ref{eq:int kl})), it is necessary to extend the parametrisation meaningfully to $|t| > 0.2\un{GeV^2}$. Therefore, at $|t| > 0.5\un{GeV^2}$, the parametrisation is anchored to a preliminary cross-section derived from the same data set as in \cite{8tev-90m} which features a dip-bump structure similar to the one observed at $\sqrt{s} = 7\un{TeV}$ \cite{epl95}. The region $0.2 < |t| < 0.5\un{GeV^2}$ is reserved for a smooth transition between the parametrisation in Eq.~(\ref{eq:nuc mod}) and the anchored part. It will be shown that changing the high-$|t|$ part has negligible impact on the results presented later on.
 
 
-%--------------------
-\vskip3mm
-\hbox to\hsize{\bf Phase\hfil}
+%------------------------------------------------------------------
+\subsubsection{Nuclear Amplitude -- Phase}
+\label{sec:cni nuclear phase}
 
-\TODO{$p_0$ always gives phase at $t=0$.}
+All parametrisations proposed below will share the parameter $p_0$ giving the phase value at $t=0$. This parameter is related to $\rho$: $\rho = 1 / \tan p_0$.
+
+\TODO{Consider alternative: replace everywhere $p_0$ with ${\pi\over 2} - \arctan{\rho}$}
 
 \begin{figure*}
 \begin{center}
 \includegraphics{fig/hadronic_phase_illustration.pdf}
-\caption{Illustration of nuclear-phase forms. The dashed lines correspond to predictions by theoretical models (\cite{elegent} and references therein). The solid lines give typical examples of parametrisations used in the study, all at the same value of $\rho = 0.10$. The peripheral example corresponds to the central values in Eq.~(\ref{eq:nuc phase per val}).
+\caption{Illustration of nuclear-phase forms. The dashed lines correspond to predictions by theoretical models (\cite{elegent} and references therein). The solid lines give typical examples of parametrisations used in this report, all at the same value of $\rho = 0.10$. The peripheral example corresponds to the central values in Eq.~(\ref{eq:nuc phase per val}).
 }
 \label{fig:phase illustration}
 \end{center}
@@ -80,7 +68,7 @@ Since the calculation of Coulomb-nuclear interference may, in principle, involve
 
 
 % ***
-A {\it constant phase} is obviously the simplest choice:
+A {\bf constant phase} is obviously the simplest choice:
 \begin{equation}
 \label{eq:nuc phase con}
 \arg {\cal A}^{\rm N}(t) = p_0 = \hbox{const.}
@@ -88,7 +76,7 @@ A {\it constant phase} is obviously the simplest choice:
 Note that this is equivalent to a strict proportionality of real and imaginary part of the amplitude at all $t$.
 
 % ***
-The {\it standard phase} parametrisation,
+The {\bf standard phase} parametrisation,
 \begin{equation}
 \label{eqn:nuc phase std}
 \arg {\cal A}^{\rm N}(t) = p_{0} + \arctan \left(\frac{|t|-|t_{0}|}{\tau}\right) -  \arctan \left(\frac{-|t_{0}|}{\tau}\right) \: ,
@@ -96,7 +84,7 @@ The {\it standard phase} parametrisation,
 implements the main features of many theoretical models -- almost imaginary amplitude in the forward direction ($p_0 \approx \pi/2$) while almost purely real in the (first) diffraction dip. The parameters $t_0 = - 0.50\un{GeV^2}$ and $\tau = 0.1\un{GeV^2}$ have been chosen such that the shape is similar to a number of model predictions, see Figure~\ref{fig:phase illustration}.
 
 % ***
-Another parametrisation is by {\em Bailly et al.}~\cite{bailly87}:
+Another parametrisation is by {\bf Bailly et al.}~\cite{bailly87}:
 \begin{equation}
 \label{eq:nuc phase bai}
 	%\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan {\rho_0\over 1 - {t\over t_{\rm d}}},\ \rho_0 = {1\over \tan p_0}
@@ -105,7 +93,7 @@ Another parametrisation is by {\em Bailly et al.}~\cite{bailly87}:
 where $p_0$ determines the phase value at $t=0$ and $t_{\rm d} \approx -0.53\un{GeV^2}$ gives the position of the diffractive minimum at $8\un{TeV}$ (preliminary result derived from the $\beta^* = 90\un{m}$ data \cite{8tev-90m}). This phase has a behaviour qualitatively similar to the model of Jenskovszky et al., see Figure~\ref{fig:phase illustration}.
 
 % ***
-The {\it peripheral phase} \cite{kl94} provides an alternative to the above descriptions. As can be seen in Figure~\ref{fig:phase illustration}, the parametrisation
+The {\bf peripheral phase} \cite{kl94} provides an alternative to the above descriptions since it may yield a very different picture in the impact-parameter space. As can be seen in Figure~\ref{fig:phase illustration}, the parametrisation
 \begin{equation}
 \label{eq:nuc phase per}
 \arg {\cal A}^{\rm N}(t) = p_0 - \zeta_1 \left(- {t\over 1\un{GeV^2}} \right)^\kappa \e^{\nu t}
@@ -122,13 +110,14 @@ where the values after ``$\pm$'' indicate boundaries of ranges within which the 
 
 Figure~\ref{fig:phase illustration} presents a comparison of phase predictions of several models to typical examples of parametrisations proposed above.
 
-It should be noted that the phase has decisive influence on the amplitude behaviour in the space of impact parameter, $b$, see e.g.~Section 3 in~\cite{klk02}. It can be characterised by the root-mean-squares (RMS) of $b$ for elastic and inelastic collisions. The constant, standard and Bailly phases lead to elastic collisions more central (smaller RMS) than the inelastic ones. The peripheral phase can yield a description with the opposite hierarchy, which is argued more natural by some authors (e.g. Section~4 in~\cite{kl96}). \TODO{Update: shape very relevant, too.}
+\TODO{Move this paragraph?} \TODO{Update: shape of b-distribution relevant, too.} It should be noted that the phase has decisive influence on the amplitude behaviour in the space of impact parameter, $b$, see e.g.~Section 3 in~\cite{klk02}. It can be characterised by the root-mean-squares (RMS) of $b$ for elastic and inelastic collisions. The constant, standard and Bailly phases lead to elastic collisions more central (smaller RMS) than the inelastic ones. The peripheral phase can yield a description with the opposite hierarchy, which is argued more natural by some authors (e.g. Section~4 in~\cite{kl96}).
 
 %------------------------------------------------------------------
 \subsubsection{Coulomb-Nuclear Interference Formulae}
 \label{sec:cni interference}
 
-The {\bf simplified West-Yennie formula (SWY)} \cite{wy68} is derived in the framework of perturbative quantum field theory by evaluating the lowest-order Feynman diagrams that comprise both nuclear and Coulomb interactions. In this approach, the interference is reduced to an additional phase between the Coulomb and nuclear amplitudes. Moreover, several approximations were used in the derivation. First, in order to avoid integrating over off-mass-shell contributions to the nuclear amplitude (poorly known), very slow variation of the nuclear amplitude phase was assumed: $\arg {\cal A}^{\rm N} \approx \hbox{const}$. Then, in order to obtain a closed-form expression, the exponential slope of the nuclear modulus
+The {\bf simplified West-Yennie formula (SWY)} \cite{wy68} is derived in the framework of perturbative quantum field theory by evaluating the lowest-order Feynman diagrams that comprise both nuclear and Coulomb interactions. In this approach, the interference is reduced to an additional phase between the Coulomb and nuclear amplitudes. Moreover, several approximations were used in the derivation. First, in order to avoid integrating over off-mass-shell contributions to the nuclear amplitude (essentially unknown), very slow variation of the nuclear amplitude phase was assumed: $\arg {\cal A}^{\rm N} \approx \hbox{const}$. Then, in order to obtain a closed-form expression, the exponential slope of the nuclear modulus
+\TODO{This equation seems unused -- remove?}
 \begin{equation}
 \label{eq:nuc slope}
 B^{\rm N}(t) = {\d \log |{\cal A}^{\rm N}|^2 \over \d t}
@@ -137,7 +126,7 @@ was assumed constant (i.e.~$b_2 = b_3 = 0$ in parametrisation Eq.~(\ref{eq:nuc m
 \begin{equation}
 \label{eq:int swy}
 	{\d\sigma\over \d t}^{\rm C+N} = {\pi (\hbar c)^2 \over s p^2} \left | {\alpha s\over t} {\cal F}^2 \e^{\I\alpha \Phi(t)} + {\cal A}^{\rm N} \right |^2\ ,\qquad
-	\Phi(t) = - \left( \log {B^{\rm N} |t|\over 2} + \gamma \right)\ ,
+	\Phi(t) = - \left( \log {b_1 |t|\over 2} + \gamma \right)\ ,
 \end{equation}
 where $\alpha$ is the fine-structure constant and $\gamma \doteq 0.577$ the Euler constant. Despite the many limitations, the formula has extensively been used in past data analyses. For backward-comparison reasons we consider it also in this report.
 
@@ -173,14 +162,14 @@ where the $t$ integrations go over the entire kinematically allowed region. A sl
 		+ {\cal A}^{\rm N}\, \e^{- \I\alpha G(t)} \right |^2 \ .
 \end{equation}
 
-By analysing the formulae Eq.~(\ref{eq:int swy}) and (\ref{eq:int kl}), one can conclude that in the region where the nuclear amplitude dominates ($|t| \gtrsim 0.003\un{GeV^2}$), the effects due to the Coulomb interaction can be proportional either to $\alpha$ or to the ratio ${\cal A}^{\rm C} / {\cal A}^{\rm N}$. In both cases, the magnitude of the interference effects can be expected at a percent level, as shown in Figure~\ref{fig:cni effect}. The figure also shows that the effects at different $|t|$ probe different parts of the nuclear phase: maximum sensitivity to $\rho$ lies at very low $|t|$ while at higher $|t|$ the effects are sensitive to phase values at higher $|t|$. It can also be observed that for the constant, standard and Bailly phase the effects are very similar and rather mild at higher $|t|$. \TODO{Thus treat as one family}. This can be understood from a very limited variation of the phase at low $|t|$, which is the region contributing most to the integral in Eq.~(\ref{eq:int kl}). On the contrary, the higher $|t|$ response to peripheral phases can have various forms, often similar to the ``U shape'' of the reconstructed cross-section, see Figures~\ref{fig:fits common con} and~\ref{fig:fits common per}. \TODO{Recheck the statements about phase at ''higher $|t|$'' and correct if needed.}
+By analysing the formulae Eq.~(\ref{eq:int swy}) and (\ref{eq:int kl}), one can conclude that in the region where the nuclear amplitude dominates ($|t| \gtrsim 0.003\un{GeV^2}$), the effects due to the Coulomb interaction can be proportional either to $\alpha$ or to the ratio ${\cal A}^{\rm C} / {\cal A}^{\rm N}$. In both cases, the magnitude of the interference effects can be expected at a percent level, as shown in Figure~\ref{fig:cni effect}. The figure also shows that the effects at different $|t|$ probe different parts of the nuclear phase: maximum sensitivity to $\rho$ lies at very low $|t|$ while at higher $|t|$ the effects are sensitive to phase values at slightly higher $|t|$. It can also be observed that for the constant, standard and Bailly phase the effects are very similar and rather mild at higher $|t|$. This can be understood from a very limited variation of the phase at low $|t|$, which is the region contributing most to the integral in Eq.~(\ref{eq:int kl}). On the contrary, the higher $|t|$ response to peripheral phases can have various forms, often similar to the ``U shape'' of the reconstructed cross-section, see the top plots in Figures~\ref{fig:fit exp1} and~\ref{fig:fit exp3}.
 
 
 %----------------------------------------------------------------------------------------------------
 \subsection{Fitting Procedure}
-\label{sec:fit}
+\label{sec:fit procedure}
 
-Beyond using the data from Table~\ref{tab:data}, one might consider including $\beta^* = 90\un{m}$ data \cite{8tev-90m} which have much smaller uncertainties but reach limited to $|t| \gtrsim 0.03\un{GeV^2}$. Due to the latter, they have essentially no sensitivity to the $\rho$ parameter, cf.~Fig.~\ref{fig:cni effect}. Furthermore, due to possible systematic tensions between the data sets, including the $\beta^* = 90\un{m}$ data may have deteriorating impact on the $\rho$ determination. Therefore, the value of $\rho$ (or $p_0$ in other words), was determined from $\beta^* = 1000\un{m}$ data only. For other parameters to which both data sets have non-negligible sensitivity (e.g.~$b_i$ in Eq.~(\ref{eq:nuc mod})), both data sets shall give compatible results. This has been verified for all the fits presented later on. Since the $\beta^* = 90\un{m}$ data yield much lower uncertainties, both data sets have been used for determining all parameters except $\rho$. In practice, a series of two fits is performed:
+Beyond using the data from Table~\ref{tab:data}, one might consider including $\beta^* = 90\un{m}$ data \cite{8tev-90m} which have much smaller uncertainties but reach limited to $|t| \gtrsim 0.03\un{GeV^2}$. Due to the latter, they have essentially no sensitivity to the $\rho$ parameter, cf.~Fig.~\ref{fig:cni effect}. Furthermore, due to possible systematic tensions between the data sets, including the $\beta^* = 90\un{m}$ data may have deteriorating impact on the $\rho$ determination. Therefore, the value of $\rho$ (or $p_0$ in other words), was determined from $\beta^* = 1000\un{m}$ data only. For other parameters to which both data sets have non-negligible sensitivity (e.g.~$b_i$ in Eq.~(\ref{eq:nuc mod})), both data sets shall give compatible results. This has been verified for all the fits presented later on. Since the $\beta^* = 90\un{m}$ data yield much lower uncertainties, both data sets have been used for determining all parameters except $\rho$. In summary, a series of two fits is performed:
 \begin{enumerate}[leftmargin=2cm]
 \item[step 1:] fit of $\beta^* = 1000\un{m}$ data with $p_0$ free,
 \item[step 2:] fit of $\beta^* = 1000$ and $90\un{m}$ data with $p_0$ fixed from the preceding step.
@@ -198,7 +187,7 @@ Each of the fits has been performed by following the standard least-squares meth
 	\Delta_i = \left.{\d\sigma\over \d t}\right|_{{\rm bin}\ i} - {\d\sigma^{\rm C+N}\over\d t}\left(t^{\rm rep}_{{\rm bin}\ i}\right)\ ,\qquad
 	\mat V = \mat V_{\rm stat} + \mat V_{\rm syst} + \mat V_{\rm norm}\ ,
 \end{equation}
-where $\Delta$ is a vector of differences between the differential cross-section data and a fit function $\d\sigma^{C+N}/\d t$ evaluated at representative points $t^{\rm rep}$ of each bin \cite{lafferty94}. The minimisation is repeated several times and the representative points are updated between iterations. The covariance matrix $\mat V$ is composed of three components. The diagonal of $\mat V_{\rm stat}$ contains statistical uncertainty squared from Table~\ref{tab:data} and from Table~3 in \cite{8tev-90m}. $\mat V_{\rm syst}$ includes all systematic uncertainty contributions except normalisation, see Eq.~(\ref{eq:covar mat}) and Eq.~(14) in \cite{8tev-90m}. $\mat V_{\rm norm}$ reflects the normalisation uncertainty: $4.2\un{\%}$ fully correlated between the $90$ and $1000\un{m}$ datasets and $0.25\un{\%}$ ($0.08\un{\%}$) for $90\un{m}$ ($1000\un{m}$) dataset individually.
+where $\Delta$ is a vector of differences between the differential cross-section data and a fit function $\d\sigma^{C+N}/\d t$ evaluated at representative points $t^{\rm rep}$ of each bin \cite{lafferty94}. The minimisation is repeated several times and the representative points are updated between iterations. The covariance matrix $\mat V$ is composed of three components. The diagonal of $\mat V_{\rm stat}$ contains statistical uncertainty squared from Table~\ref{tab:data} and from Table~3 in \cite{8tev-90m}. $\mat V_{\rm syst}$ includes all systematic uncertainty contributions except normalisation, see Eq.~(\ref{eq:covar mat}) and Eq.~(14) in \cite{8tev-90m}. $\mat V_{\rm norm}$ reflects the normalisation uncertainty: $4.2\un{\%}$ fully correlated between the $90$ and $1000\un{m}$ datasets and $0.25\un{\%}$ ($0.08\un{\%}$) for $90\un{m}$ ($1000\un{m}$) dataset individually. \TODO{interference formulae by \cite{elegent}}
 
 
 % ***
@@ -209,36 +198,43 @@ where $\Delta$ is a vector of differences between the differential cross-section
 	\Delta_i = \left.{\d\sigma\over \d t}\right|_{{\rm bin}\ i} - {1\over \Delta t_i} \int_{{\rm bin}\ i} f(t)\,\d t\ ,\qquad
 	\mat V = \mat V_{\rm stat} + \mat V_{\rm syst}\ ,
 \end{equation}
-$\Delta t_i$ representing the width of the $i$-th bin
+$\Delta t_i$ representing the width of the $i$-th bin. \TODO{custom implementation of interference formulae.}
 
 \end{enumerate}
+
+
+The fits have proven to have extremely low sensitivity to a number of choices listed below.
+\begin{itemize}
+\item Choice of the form factor in Eq.~(\ref{eq:coul cs}). The options summarised in \cite{elegent} have been tested, none of them giving any significant difference with respect to the default choice \cite{puckett10}.
+\item Extension of the nuclear modulus to non-measured $|t|$ region. \TODO{details}
+\item The two variants of the KL formula, Eqs.~(\ref{eq:int kl}) and (\ref{eq:int kl exp}).
+\item Fit implementations A and B, manifesting the stability of the fit results.
+\item Fits with constant, standard and Bailly phase practically indistinguishable. This is can be expected from Fig.~\ref{fig:cni effect} showing that the CNI effects are very similar. Therefore, later on these phases will be treated as one family represented by the constant phase.
+\end{itemize}
+
 
 As anticipated above, one of the goals of this report is to probe the origin of the earlier observed differential cross-section non-exponentiality \cite{8tev-90m}. Therefore, the following two classes of fits will be considered.
 \begin{itemize}
 \item Section \ref{sec:fit exp1}: fits with purely-exponential nuclear modulus, that is $N_b=1$ in Eq.~(\ref{eq:nuc mod}). In this case, the non-exponentiality must come from the CNI effects.
-\item Section \ref{sec:fit exp3}: fits with nuclear modulus flexible enough to describe the non-exponentiality with or without the CNI effects.
+\item Section \ref{sec:fit exp3}: fits with nuclear modulus flexible enough to describe the non-exponentiality without the CNI effects. Here, the non-exponentiality may be due to the nuclear modulus, CNI effects or both.
 \end{itemize}
 
 
-Three nuclear phase options have been considered which yield, as shown in Fig.~\ref{fig:bdist exp3}, three different levels of centrality/peripherality:
+For each of the nuclear modulus choices, the following three phase choices will be considered:
 \begin{itemize}\setlength\itemsep{0pt}
 \item constant phase, Eq.~(\ref{eq:nuc phase con}),
 \item mid-peripheral phase, Eq.~(\ref{eq:nuc phase per}) with parameters free within the bounds in Eq.~(\ref{eq:nuc phase per val}),
 \item full-peripheral phase, Eq.~(\ref{eq:nuc phase per}) with parameters fixed to the central values in Eq.~(\ref{eq:nuc phase per val}).
 \end{itemize}
+It will be shown in Fig.~\ref{fig:bdist exp3} that this collection samples different kinds of behaviour in impact-parameter space: from full centrality to full peripherality.
 
-Below: brief description of attempts that have been tried but are not worth detailed discussion below.
 
-\TODO{Tried several form-factors, no impact on the data.}
-
-\TODO{Fits with constant, standard and Bailly phase practically indistinguishable $\rightarrow$ treated as one family represented by the constant phase.}
-
-\TODO{Approaches A and B give compatible results $\rightarrow$ stability.}
-
-\TODO{Fits with the two variants of the KL formula, Eqs.~(\ref{eq:int kl}) and (\ref{eq:int kl exp}), give compatible results.}
-
-\TODO{Fits with different implementations of interference formulae (\cite{elegent} and custom) $\rightarrow$ confidence, no numerical issues.}
-
+\TODO{Make symbols consistent, find good place:}
+\begin{equation}
+\label{eq:si tot}
+\sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma^{\rm N}\over\d t\right|_0
+		= {16\pi^2\, (\hbar c)^4\over s p^2 (1+\rho^2)}\, a^2\ ,
+\end{equation}
 
 
 %----------------------------------------------------------------------------------------------------
