--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -52,4 +52,4 @@ The paper is organised as follows.
 %hadronic modulus, whereas the $\beta^{*}=1000\,$m set with its reach to very low
 %$|t|$ determines phase parameters.
 
-\TODO{physics goals: $\sigma_{\rm tot}$ and $\rho$, Coulomb analysis = necessity/tool}
+\TODO{physics goals: $\sigma_{\rm tot}$ and $\rho$, Coulomb analysis = tool}
