bibliography exported to standanlone file included in both NPB and CERN versions
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10751 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -80,96 +80,7 @@ proton-proton interactions \sep elastic scattering \sep total cross-section \sep
 
 %----------------------------------------------------------------------------------------------------
 \begin{thebibliography}{99}
-%
-\bibitem{plb39} \Name{G. Barbiellini et al.} \REVIEW{Phys.~Lett.}{B39}{1972}{663}
-
-\bibitem{plb115} \Name{M. Ambrosio et al.} \REVIEW{Phys.~Lett.}{B115}{1982}{495}
-
-\bibitem{npb141} \Name{L. Baksay et al.} \REVIEW{Nucl.~Phys.}{B141}{1978}{1}, 
-erratum \REVIEW{Nucl.~Phys.}{B148}{1979}{538}
-\bibitem{npb248} \Name{A. Breakstone et al.} \REVIEW{Nucl.~Phys.}{B248}{1984}{253}
-
-\bibitem{plb147} \Name{M. Bozzo et al.} \REVIEW{Phys.~Lett.}{B147}{1984}{385}
-
-\bibitem{prl61} \Name{N.A. Amos et al.} \REVIEW{Phys.~Rev.~Lett.}{61}{1988}{525}
-\bibitem{prl68} \Name{N.A. Amos et al.} \REVIEW{Phys.~Rev.~Lett.}{68}{1992}{2433}
-\bibitem{prd50} \Name{F. Abe et al.} \REVIEW{Phys.~Rev.}{D50}{1994}{5518}
-\bibitem{prd86} \Name{V.M. Abazov et al.} \REVIEW{Phys.~Rev.}{D86}{2012}{012009}
-
-\bibitem{epl96}
-    %First measurements of the total proton-proton cross-section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
-	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
-
-\bibitem{epl101-el}
-	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{101}{2013}{21002}
-
-\bibitem{prl111} 
-	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Phys.~Rev.~Lett.}{111}{2013}{012001}
-
-\bibitem{alfa}
-	\Name{G.~Aad~\etal{}~(ATLAS Collaboration)}
-	\REVIEW{Nucl.~Phys.}{B889}{2014}{486-548}
-
-\bibitem{totem-jinst}
-    %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
-	\Name{G.~Anelli~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{JINST}{3}{2008}{S08007}
-
-
-\bibitem{totem-ijmp}
-	% Performance of the Totem Detectors at the LHC
-	\Name{G. Antchev~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Int.~J.~Mod.~Phys.~A}{28}{2013}{1330046}
-
-\bibitem{totem-optics}
-	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
-	% LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
-	\REVIEW{New J.~Phys.}{16}{2014}{103041}
-
-\bibitem{op-elog} CERN BE-OP eLogbook: \url{https://www.cern.ch/ab-dep-op-elogbook/elogbook/secure/eLogbook.php?shiftId=1045825}
-
-\bibitem{hubert-thesis}
-	\Name{H.~Niewiadomski}
-	``Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC'',
-    PhD thesis, University of Manchester, 2008;
-    CERN-THESIS-2008-080,
-	\url{http://cds.cern.ch/record/1131825}
-
-\bibitem{lhc-note-334}
-	\Name{J.~Wenninger}
-	LHC-PROJECT-NOTE-334,
-	\url{https://cds.cern.ch/record/708939}
-
-%\bibitem{lhc-note-326}
-%	\Name{L.~Bottura~\etal{}}
-%	LHC-PROJECT-NOTE-326,
-%	\url{https://cds.cern.ch/record/691774}
-
-\bibitem{cern-ats-2013-040}
-	\Name{J.~Wenninger}
-	CERN-ATS-2013-040,
-	\url{https://cds.cern.ch/record/1546734}
-
-\bibitem{bottura-pac09} 
-        \Name{L. Bottura et al.}
-        Proceedings of PAC09, Vancouver 2009, contribution MO6PFP046.
-
-\bibitem{fidel}
-	FiDel: the Field Model of the LHC,\\
-	\url{http://lhc-div-mms.web.cern.ch/lhc-div-mms/tests/MAG/Fidel/}
-
-\bibitem{lafferty94}
- 	% Where to stick your data points: The treatment of measurements within wide bins
-	\Name{G.~D.~Lafferty~and T.R.~Wyatt}
-	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
-
-\bibitem{compete} 
-	\Name{J.~R.~Cudell~\etal{} (COMPETE Collaboration)}
-	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
-
+\input bibliography
 \end{thebibliography}
 
 \end{document}
